OK: VADER, Demonstration, Conclusion, References

--- a/SLP_DO_NASCIMENTO_SANTOS_Alaf_GIRAUD_Ianis.ipynb
+++ b/SLP_DO_NASCIMENTO_SANTOS_Alaf_GIRAUD_Ianis.ipynb
@@ -414,7 +414,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## NO CONTEXT APPROACH"
+        "## Non-contextualised Approach"
       ]
     },
     {
@@ -762,7 +762,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Context Approach"
+        "## Contextualised Approach"
       ]
     },
     {
@@ -1105,7 +1105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "With VADER approach we can take all the words in a sentence and then set a value, either negative, positive or neutral and combines those values in order to tell us if the sentence itself is more globally positive or negative. VADER gives us values from -1 to 1 for each word and a global compound (which we will be using here). From [6] we have a study showing that most of the time sarcasm comes with positive sentences, but in a negative situation or context. For simplicity, we will be using VADER as a voter in our final decision by defining a sentence as sarcastic when it has a positive or neutral compound in the answer, otherwise it will be non sarcastic; together with a negative or neutral context. It is important to highlight that VADER doesn't take into account the relationship between the words, which is very important in the real world. But it will be used here as voter for simplicity."
+        "With VADER approach we can take all the words in a sentence and then set a value, either negative, positive or neutral and combines those values in order to tell us if the sentence itself is more globally positive or negative. VADER gives us values from -1 to 1 for each word and a global compound (which we will be using here). From [6] we have a study showing that most of the time sarcasm comes with positive sentences, but in a negative situation or context. For simplicity, we will be using VADER as a voter in our final decision by defining a sentence as sarcastic when it has a positive or neutral compound in the answer, otherwise it will be non sarcastic; together with a negative or neutral context. It is important to highlight that VADER doesn't take into account the relationship between the words, which is very important in the real world. But it will be used here as a voter for simplicity."
       ]
     },
     {
@@ -1255,13 +1255,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "    Throughout our work, we developed 3 approaches for sarcasm recognition so we were able to apply the Condorcet's jury theorem, so we obtained a more trustful and robust system to give us binary predictions in either a setence is sarcastic or not. We have worked with the SARC corpus, containing Reddit comments self annotated by the authors.\n",
+        "The project started with a small survey to better understand the possibilities and choose a subject that could be interesting to the group members. After that, we began to study some basic Machine Learning concepts in order to get a better idea of what could be done, together with some text mining theory. Then, we read the PyTorch documentation aiming to find a starting point. Finally, we got into the coding phase, where [5] was extremely important to have some kind of comparison and basis for our code. Throughout our work, we developed 3 approaches for sarcasm recognition so we were able to apply the Condorcet's jury theorem in order to obtain a more trustful and robust system to give us binary predictions in either a sentence is sarcastic or not. We have worked with the SARC corpus, containing Reddit comments self annotated by the authors.\n",
         "\n",
-        "    For the first model, we designed a simple sarcasm recoginition system, taking only a setence as input for the analysis (no context), based on a Pytorch example for sentiment analysis. There we had a test accuracy over 65%.\n",
+        "1. For the first model, based on [1] and [5], we designed a simple sarcasm recognition system, taking only a sentence as input for the analysis (no context), based on a Pytorch example for sentiment analysis. There we had a test's accuracy over 65%.\n",
         "\n",
-        "    Concerning the second model, using the same self-annotated dataset, we made some modifications in the first model in order to take into account the context in which the comment was written (parent text). This time we achieved a test accuracy over 50%.\n",
+        "2. Concerning the second model, based on [1] and [5], using the same self-annotated dataset, we made some modifications in the first model in order to take into account the context in which the comment was written (parent text). This time we achieved a test's accuracy of 60%.\n",
         "\n",
-        "    Finally, as a way to have a third opinion in the voting process suggested by the Condorcet's jury theorem and explored in [7], we used the pretrained model VADER to do sentiment analysis with context. The ideia here was to consider the contrast between the situation and the target sentence, in [6] it was studied the relationship between negative situations/contexts and positive answers/sentences as a way to express sarcasm in the social media Twitter."
+        "3. Finally, as a way to have a third opinion in the voting process suggested by the Condorcet's jury theorem and explored in [7], we used the pretrained model VADER to do sentiment analysis with context. The idea here was to consider the contrast between the situation and the target sentence, in [6] it was studied the relationship between negative situations/contexts and positive answers/sentences as a way to express sarcasm in the social media Twitter. With this third and last approach, we reached a test's accuracy over 50%.\n",
+        "\n",
+        "Since the third approach did not give us good accuracy, it is possible to conclude that our voting system is not reliable taking into account the mentioned theorem, but the individual results from the two first approaches are a significant achievement for a first text mining project applied to NLP challenges. For the continuation of this project, exploring Condorcet's jury theorem and developing more reliable voters could be a promising direction. If we want to use this solution in embedded applications, decreasing the system complexity can be also a key. Finally, capturing semantic relationships within multiword expressions has the power to increase the system accuracy and we could even go forward and start expanding the initial idea to speech analysis."
       ]
     },
     {
@@ -1291,7 +1293,10 @@
         "\n",
         "[6] Riloff, E., Qadir, A., Surve, P., De Silva, L., Gilbert, N. and Huang, R., 2013, October. Sarcasm as contrast between a positive sentiment and negative situation. In Proceedings of the 2013 conference on empirical methods in natural language processing (pp. 704-714).\n",
         "\n",
-        "[7] Ariharan, V., Eswaran, S.P., Vempati, S. and Anjum, N., 2019. Machine learning quorum decider (MLQD) for large scale IoT deployments. Procedia Computer Science, 151, pp.959-964."
+        "[7] Ariharan, V., Eswaran, S.P., Vempati, S. and Anjum, N., 2019. Machine learning quorum decider (MLQD) for large scale IoT deployments. Procedia Computer Science, 151, pp.959-964.\n",
+        "\n",
+        "[8] Sag, I.A., Baldwin, T., Bond, F., Copestake, A. and Flickinger, D., 2002. Multiword expressions: A pain in the neck for NLP. In Computational Linguistics and Intelligent Text Processing: Third International Conference, CICLing 2002 Mexico City, Mexico, February 17–23, 2002 Proceedings 3 (pp. 1-15). Springer Berlin Heidelberg.\n",
+        "\n"
       ]
     }
   ],
