--- a/SLP_DO_NASCIMENTO_SANTOS_Alaf_GIRAUD_Ianis.ipynb
+++ b/SLP_DO_NASCIMENTO_SANTOS_Alaf_GIRAUD_Ianis.ipynb
@@ -1209,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -1231,19 +1231,12 @@
             "M3:  True\n",
             "Voting Result:  True\n",
             "--------------------\n",
-            "Situation  2 : Mine operator in accident had 57 safety violations last month alone and and did not install a required ventilation system that would have prevented the disasterWhen a roommate is acting bizarre\n",
-            "Remark:  How does this compare to other mine operationsIs it time for your medication or mine?\n",
+            "Situation  2 : Chart showing how people's political views change as they age, based on 172,853 people's self-proclaimed political views on OKcupid.\n",
+            "Remark:  Good lord... my chart is the exact opposite of this.\n",
             "M1:  False\n",
             "M2:  False\n",
             "M3:  True\n",
-            "Voting Result:  False\n",
-            "--------------------\n",
-            "Situation  3 : When someone says something that is very obvious\n",
-            "Remark:  Really, Sherlock? No! You are clever.\n",
-            "M1:  True\n",
-            "M2:  True\n",
-            "M3:  True\n",
-            "Voting Result:  True\n"
+            "Voting Result:  False\n"
           ]
         }
       ],
@@ -1255,18 +1248,14 @@
         "input1 = [\n",
         "    \"When something bad happens\",\n",
         "    \"When you expected something to happen, especially after warning someone about it\",\n",
-        "    \"Mine operator in accident had 57 safety violations last month alone and and did not install a required ventilation system that would have prevented the disaster\"\n",
-        "    \"When a roommate is acting bizarre\",\n",
-        "    \"When someone says something that is very obvious\"\n",
+        "    \"Chart showing how people's political views change as they age, based on 172,853 people's self-proclaimed political views on OKcupid.\",\n",
         "          ]\n",
         "\n",
         "\n",
         "input2 = [\n",
         "    \"That's just what I needed today!\",\n",
         "    \"Well, what a surprise.\",\n",
-        "    \"How does this compare to other mine operations\"\n",
-        "    \"Is it time for your medication or mine?\",\n",
-        "    \"Really, Sherlock? No! You are clever.\"\n",
+        "    \"Good lord... my chart is the exact opposite of this.\",\n",
         "          ]\n",
         "\n",
         "model = model.to(\"cpu\")\n",
